Modified Numbers constructors as suggested by Sonar
Signed-off-by: pierantoniomerlino <pierantonio.merlino@eurotech.com>