@@ -302,7 +302,7 @@ public class ComponentUtil
 
 		case CHAR: 
 			for (String value : defaultValues) {
-				values.add( new Character(value.charAt(0)));		
+				values.add(Character.valueOf(value.charAt(0)));		
 			}
 			return values.toArray( new Character[]{});
 
